--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Invitation
 email: chetan.pm@rediffmail.com
 description: > # Invitation for my personal event.
 exclude: ["node_modules", "gulpfile.js", "package.json", "Gemfile", "Gemfile.lock"]
-baseurl: "" # the subpath of your site, e.g. /blog/
+baseurl: /Invitation/ # the subpath of your site, e.g. /blog/
 highlighter: pygments
 github: [Repository metadata]
 # url: "http://yourdomain.com" # the base hostname & protocol for your site
